aesthetic update in configmap.yaml (#41)
* aesthetic fix

--- a/vault-chart/templates/configmap.yaml
+++ b/vault-chart/templates/configmap.yaml
@@ -6,9 +6,7 @@ metadata:
 data:
   config.json : |
 {{- if eq .Values.Vault.Backend.Type "inmem"}}
-    backend "inmem" {
-
-    }
+    backend "inmem" { }
 {{- end}}
 {{- if eq .Values.Vault.Backend.Type "consul"}}
     backend "consul" {
