--- a/vault-chart/templates/configmap.yaml
+++ b/vault-chart/templates/configmap.yaml
@@ -4,32 +4,48 @@ kind: ConfigMap
 metadata:
   name: {{.Release.Name}}
 data:
-  config.json : |
-{{- if eq .Values.Vault.Backend.Type "inmem"}}
-    backend "inmem" { }
-{{- end}}
+  config.json: |
+    {{- if eq .Values.Vault.Backend.Type "inmem" }}
+      backend "inmem" { }
+    {{- end}}
 
+    {{- if eq .Values.Vault.Backend.Type "consul" }}
 
-   backend {{ .Values.Vault.Backend.Type | quote}} {
-      address = "{{.Values.Vault.Backend.Address}}"
-  {{- if .Values.Vault.Tls }}
-      scheme = "https"
-  {{- else }}
-      scheme = "http"
-  {{- end }}
-      token = "{{.Values.Vault.Backend.Token}}"
-    }
+      backend "consul"
+      {
+          address = {{ .Values.Vault.Backend.Address | quote }}
+      {{- if .Values.Vault.Tls }}
+          scheme = "https"
+      {{- else }}
+          scheme = "http"
+      {{- end }}
+          token = {{ .Values.Vault.Backend.Token | quote }}
+      }
 
-    listener "tcp" {
-{{- if .Values.Vault.Tls }}
-      address = "0.0.0.0:443"
-      tls_key_file = "/etc/vault/tls/vault.key"
-      tls_cert_file = "/etc/vault/tls/vault.crt"
-      tls_client_ca_file = "/etc/vault/tls/ca.crt"
-{{- else}}
-      address = "0.0.0.0:80"
-      tls_disable = true
-{{- end}}
-    }
+    {{- else if eq .Values.Vault.Backend.Type "etcd" }}
+
+      backend "etcd"
+      {
+      {{- if .Values.Vault.Tls }}
+          address = "https://{{ .Values.Vault.Backend.Address }}"
+      {{- else }}
+          address = "http://{{ .Values.Vault.Backend.Address }}"
+      {{- end }}
+          etcd_api = {{ .Values.Vault.Backend.Etcd_Api | quote }}
+      }
+
+    {{- end }}
+
+      listener "tcp" {
+    {{- if .Values.Vault.Tls }}
+        address = "0.0.0.0:443"
+        tls_key_file = "/etc/vault/tls/vault.key"
+        tls_cert_file = "/etc/vault/tls/vault.crt"
+        tls_client_ca_file = "/etc/vault/tls/ca.crt"
+    {{- else}}
+        address = "0.0.0.0:80"
+        tls_disable = true
+    {{- end}}
+      }
 
 #   disable_mlock = true
