--- a/vault-chart/templates/configmap.yaml
+++ b/vault-chart/templates/configmap.yaml
@@ -3,7 +3,18 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{.Release.Name}}
+  labels:
+    app: {{ template "vault.name" . }}
+    chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
+    component: "{{ .Release.Name }}-{{ .Values.component }}"
+    heritage: {{ .Release.Service }}
+    release: {{ .Release.Name }}
+
 data:
+  vault-start.sh: |-
+{{ .Files.Get "vault-start.sh" | indent 4 }}
+#  lifecycle-prestop.sh: |-
+#{{ .Files.Get "lifecycle-prestop.sh" | indent 4 }}
   config.json: |
     {{- if eq .Values.Vault.Backend.Type "inmem" }}
       backend "inmem" { }
