added port to the address line of the etcd configmap config.json data… (#45)
* added port to the address line of the etcd configmap config.json data object.

a few changes to ignore file, to configmap and values. Including a readme file that lists out values that can be changed.

* refactored all values and moved a few things.

--- a/vault-chart/values.yaml
+++ b/vault-chart/values.yaml
@@ -1,65 +1,47 @@
-Vault:
-  Image: "quay.io/samsung_cnct/vault"
-  ImageTag: "0.8.3"
-  ImagePullPolicy: "Always"
-  Component: "vault"
+vault:
+  image: "quay.io/samsung_cnct/vault"
+  imageTag: "0.8.3"
+  imagePullPolicy: "Always"
+  component: "vault"
+  nodePort: 32443
+  backend: etcd
+  enableTLS: false
+  enableDebug: true
+  replicas: 3
+  cpu: "512m"
+  memory: "200Mi"
 
-  NodePort: 32443
 
-  Backend:
-    # Etcd params used from:
-    # https://www.vaultproject.io/docs/configuration/storage/etcd.html
-    # Types recognized: etcd, consul
-    Type: "etcd"
+# Consul backend example
+  consulBackend:
+    address: "consul-consul:8500"
+    token: "token"
 
-    # do not specify protocol as it is defined by definition
-    # of Tls below.
-    Address: "etcd-vault-etcd"
-    Port: 3379
+# etcd backend example
+  etcdBackend:
+    discoverySRV:
+    address: "etcd-vault-etcd"
+    port: 3379
+    etcdApi: "v3"
+    path: "vault/"
+    sync: "false"
+    username: ""
+    password: ""
+    scheme: "http"
+    token: "token"
+    clusterAddress: ""
+    disableClustering: "false"
+    clientCA:
+    clientCert:
+    clientKey:
 
-    # ha_enabled is automatically set to true if replicas is > 1
+# TLS info
+  tls:
+    cert: ""
+    key: ""
+    ca: ""
 
-    # etcd_api: Only needed for etcd backend.
-    Etcd_Api: "v3"
 
-    # Path is used by Etcd and is set to vault/ by default if
-    # not specifed.
-    Path: "vault/"
-
-    # Sync is used by Etcd and is set to "false" by default if
-    # not specified
-    Sync: "false"
-
-    # Etcd l/p for vault communication. Default is ""
-    Username: ""
-    Password: ""
-
-    # required for consul backend. Ignored by etcd.
-    Scheme: "http"
-
-    # Used for consul but ignored for etcd so no need to remove.
-    Token: "token"
-
-    # Etcd redirect_address which is required when ha_enabled is set
-    # The template automatically sets this to "http[s]://vault-vault"
-    # if you comment this out. It uses https if Tls is specified below.
-    # Redirect_addr: ""
-
-    # if replicas is > 1 and you're using etcd, you should consider
-    # settings these:
-    # redirect_addr is set automatically in the template for now.
-    Cluster_address: ""
-    Disable_clustering: "false"
-
-  Replicas: 3
-  Cpu: "512m"
-  Memory: "200Mi"
-
-#  Tls:
-#    Cert: ""
-#    Key: ""
-#    Ca: ""
-#
   tolerations:
    # - key: taintKey
    #   value: taintValue
