OK. Refactored to allow sending key in plain text or encrypted message. Needs lots of testing.

--- a/vault-chart/templates/deployment.yaml
+++ b/vault-chart/templates/deployment.yaml
@@ -50,6 +50,7 @@ spec:
           value: "false"
         - name: VAULT_INIT_VARS
           value: "{
+                    "encrypt_key_to_rcpt": {{ .Values.vault.init.encrypt_key_to_rcpt }},
                     [
                       {{- range $i, $k := .Values.vault.init.key_masters }}
                       {{- if gt $i 0 }},{{ end }} 
