--- a/vault-chart/templates/deployment.yaml
+++ b/vault-chart/templates/deployment.yaml
@@ -49,7 +49,7 @@ spec:
         - name: RUN_TESTS
           value: "false"
         - name: VAULT_INIT_VARS
-          value: "{
+          value: '{
                     "encrypt_key_to_rcpt": {{ .Values.vault.init.encrypt_key_to_rcpt }},
                     [
                       {{- range $i, $k := .Values.vault.init.key_masters }}
@@ -60,7 +60,7 @@ spec:
                       }
                       {{- end }}
                     ]
-                  }"
+                  }'
         resources:
           limits:
             cpu: {{ .Values.vault.cpu }}
