going to have to use a sidecar job to init vault or some other means. here are some changes I have started on to head in the right (hopefully) direction

--- a/vault-chart/templates/deployment.yaml
+++ b/vault-chart/templates/deployment.yaml
@@ -72,7 +72,7 @@ spec:
             memory: {{ .Values.vault.memory }}
         command:
           - "/bin/sh"
-          - "/vault-bin/vault-init.sh"
+          - "/vault-bin/vault-start.sh"
       volumes:
       - name: config
         configMap:
