new .gitlab-ci and update of start script to NOT auto init/unseal. (#52)
* updates/bugfixes/troubleshoot stuffs. committing for safety - iterative.

* Final fixes to script. Currently seems to work, but needs more testing. Blocked by mail MUA no working.

* Some code clean up and a few bugfixes.

* addition of new attributes into values.yaml for vault start script

* final changes to values file for vault for start script to function properly disabling auto init, and auto email. Renamed some of the variables in the values file in conjunction with the deployment.yaml file in the chart and to disambiguate some of them as well. Updates to starts script for said changes. Changes to deployment.yaml chart file for said changes.

* save this version gitlab-ci.yml.

* Took .gitlab-ci.yml from chart-vault-etcd. These two charts are used together and that build script should work fine with this chart and it is comprehensive and complete. Altered sufficiently for requirements of this repo.

* fix appname var

* Fixed .gitignore to ignore Chart.yaml in any directory. Fixes to .gitlab-ci.yml. Moved vault-chart dir to vault to be more in line with other charts -- it was like that for Jenkins needs anyway IIRC.

* build failing likely because helm is initing for some reason -- removed and trying again

* build still failing -- some ts things added to help find a fix

* Updated ts pieces. Fixed chart name in Chart.yaml.in.

* Still working on discovering the problem, but I think I am getting closer.

* Problem is that CHART_VER and CHART_REL are not returning anything. I have placed a temporary bandage on the problem for now. I will readdress this issue tomorrow

* that bandaid fell off. trying something else

* attempt #2 here.

* Slightly different angle. Tagging is the problem right now.

* brute force. this tagging issue really needs to be addressed!!

* GUH! I am loosing my patience here. Removed problematic lines in .gitlab-ci

* Removed 

--- a/vault/templates/deployment.yaml
+++ b/vault/templates/deployment.yaml
@@ -60,10 +60,14 @@ spec:
           value: "{{ .Values.vault.listenerPort }}"
         - name: VAULT_INIT_VARS
           value: '{
+                    "skip_unseal_vault": {{ .Values.vault.init.skip_unseal_vault }},
+                    "skip_email_recipients": {{ .Values.vault.init.skip_email_recipients }},
                     "encrypt_key_to_rcpt": {{ .Values.vault.init.encrypt_key_to_rcpt }},
+                    "enable_auth_backends": {{ .Values.vault.init.enable_auth_backends }},
+
                     "recipients": 
                     [
-                      {{- range $i, $k := .Values.vault.init.key_masters }}
+                      {{- range $i, $k := .Values.vault.init.recipients }}
                       {{- if gt $i 0 }},{{ end }} 
                       {
                         "email": {{ $k.email | quote }}, 
