This PR addresses the requirements needed to get vault working, so far, in HA cluster mode (#55)
@alejandroEsc was vetting the changes as we were worked on this stuff. I'm merging.

* Some stuff was lost in the last commit. This re-establishes the things I found that were lost. There may still be some missing items, however.

* Fixed service.yaml -- an issue caused by the rebase before.

* Another rebase miss -- added back in. This *should* be it. This also adds the use of VAULT_CLUSTER_ADDR exported out to the running env. We are currently working to address the inability to talk to vault from any host.

* Fixed use of prototype used in URI for cluster_address for vault in both the configmap and start script.

* Removed setting cluster_addr in configmap. Vaults use of ports is really confusing when it comes to HA set up. @alejandro and I are currently working through permutations of this to get it working properly.

* Quick change in start script to set VAULT_API_ADDR to port 80 and then added some echoes out to STDOUT for debugging running instances.

--- a/vault/templates/configmap.yaml
+++ b/vault/templates/configmap.yaml
@@ -34,6 +34,7 @@ data:
       {{- if .Values.vault.etcdBackend.discoverySRV }}
           discovery_srv = {{ .Values.Vault.etcdBackend.discoverySRV }}
       {{- end }}
+
       {{- if .Values.vault.enableTLS }}
           address = "https://{{ .Values.vault.etcdBackend.address }}:{{ .Values.vault.etcdBackend.port }}"
           tls_ca_file = {{ default "/etc/vault/tls/ca.crt" .Values.vault.etcdBackend.clientCA | quote }}
@@ -42,22 +43,28 @@ data:
       {{- else }}
           address = "http://{{ .Values.vault.etcdBackend.address }}:{{ .Values.vault.etcdBackend.port }}"
       {{- end }}
+
           etcd_api = {{ .Values.vault.etcdBackend.etcdApi | quote }}
+          disable_clustering = {{ default "false" .Values.vault.etcdBackend.disableClustering | quote }}
+
       {{- if gt .Values.vault.replicas 1.0 }}
           ha_enabled = {{ "true" | quote }}
-          cluster_addr = {{ default "" .Values.vault.etcdBackend.clusterAddress | quote }}
-          disable_clustering = {{ default "false" .Values.vault.etcdBackend.disableClustering | quote }}
+          
+          # Overridden by env var set in start script. That should be used instead of this.
       {{- if .Values.vault.enableTLS }}
-          redirect_addr = "{{ default "https://0.0.0.0" .Values.vault.etcdBackend.redirectAddr }}:{{ default 8200 .Values.vault.etcdBackend.port }}"
+          redirect_addr = "https://{{ default "0.0.0.0" .Values.vault.redirectAddr }}:{{ default 8200 .Values.vault.redirectPort }}"
       {{- else }}
-          redirect_addr = "{{ default "http://0.0.0.0" .Values.vault.etcdBackend.redirectAddr }}:{{ default 8200 .Values.vault.etcdBackend.port }}"
+          redirect_addr = "http://{{ default "0.0.0.0" .Values.vault.redirectAddr }}:{{ default 8200 .Values.vault.redirectPort }}"
       {{- end }}
+
       {{- else }}
           ha_enabled = {{ "false" | quote }}
       {{- end }}
+
       {{- if .Values.vault.etcdBackend.path }}
           path = {{ .Values.vault.etcdBackend.path | quote }}
       {{- end }}
+
           sync = {{ default "false" .Values.vault.etcdBackend.sync | quote }}
           username = {{ default "" .Values.vault.etcdBackend.username | quote }}
           password = {{ default "" .Values.vault.etcdBackend.password | quote }}
