--- a/vault/templates/service.yaml
+++ b/vault/templates/service.yaml
@@ -14,17 +14,17 @@ spec:
   type: NodePort
 {{- end }}
   ports:
-    - name: {{ template "vault.fullname" . }}
+    - name: client-port
       protocol: TCP
 {{- if .Values.vault.enableTLS }}
       port: 443
-      targetPort: 443
+      targetPort: 8200
 {{- else }}
       port: 80
-      targetPort: 80
+      targetPort: 8200
 {{- end }}
 {{- if .Values.vault.nodePort }}
       nodePort: {{ .Values.vault.nodePort }}
 {{- end }}
   selector:
-    app: {{.Release.Name}}
+    app: {{ template "vault.fullname" . }}
