--- a/vault/templates/vault-run-config.yaml
+++ b/vault/templates/vault-run-config.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ template "vault.fullname" . }}
+  name: {{ template "vault.fullname" . }}-run
   labels:
     app: {{ template "vault.name" . }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
@@ -10,26 +10,15 @@ metadata:
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
 data:
-  vault-start.sh: |-
-{{ .Files.Get "vault-start.sh" | indent 4 }}
-  config.json: |
-    {{- if eq .Values.vault.backend "inmem" }}
-      backend "inmem" { }
-    {{- end}}
+  config.hcl: |
+    # the following are defined in each replicas environment, through corresponding VAULT_* variables 
+    # api_addr
+    # cluster_address
 
-    {{- if eq .Values.vault.backend "consul" }}
-      backend "consul"
-      {
-          address = {{ .Values.vault.consulBackend.address | quote }}
-      {{- if .Values.vault.enableTLS }}
-          scheme = "https"
-      {{- else }}
-          scheme = "http"
-      {{- end }}
-          token = {{ .Values.vault.consulBackend.token | quote }}
-      }
+    {{- if eq .Values.vault.backend "inmem" }}
+      storage "inmem" { }
     {{- else if eq .Values.vault.backend "etcd" }}
-      backend "etcd"
+      storage "etcd"
       {
       {{- if .Values.vault.etcdBackend.discoverySRV }}
           discovery_srv = {{ .Values.Vault.etcdBackend.discoverySRV }}
@@ -45,26 +34,13 @@ data:
       {{- end }}
 
           etcd_api = {{ .Values.vault.etcdBackend.etcdApi | quote }}
-          disable_clustering = {{ default "false" .Values.vault.etcdBackend.disableClustering | quote }}
-
       {{- if gt .Values.vault.replicas 1.0 }}
-          ha_enabled = {{ "true" | quote }}
+          ha_enabled = "true"
+      {{- else }}
+          ha_enabled = "false"
+      {{- end }}
           
-          # Overridden by env var set in start script. That should be used instead of this.
-      {{- if .Values.vault.enableTLS }}
-          redirect_addr = "https://{{ default "0.0.0.0" .Values.vault.redirectAddr }}:{{ default 8200 .Values.vault.redirectPort }}"
-      {{- else }}
-          redirect_addr = "http://{{ default "0.0.0.0" .Values.vault.redirectAddr }}:{{ default 8200 .Values.vault.redirectPort }}"
-      {{- end }}
-
-      {{- else }}
-          ha_enabled = {{ "false" | quote }}
-      {{- end }}
-
-      {{- if .Values.vault.etcdBackend.path }}
-          path = {{ .Values.vault.etcdBackend.path | quote }}
-      {{- end }}
-
+          path = {{ default (print .Release.Namespace "/" .Release.Name "/" ) .Values.vault.etcdBackend.path | quote }}  
           sync = {{ default "false" .Values.vault.etcdBackend.sync | quote }}
           username = {{ default "" .Values.vault.etcdBackend.username | quote }}
           password = {{ default "" .Values.vault.etcdBackend.password | quote }}
@@ -72,14 +48,15 @@ data:
     {{- end }}
 
       listener "tcp" {
+        address = "0.0.0.0:{{ .Values.vault.listenerPort }}"
+        cluster_address = "0.0.0.0:{{ .Values.vault.clusterListenerPort }}"
     {{- if .Values.vault.enableTLS }}
-        address = "0.0.0.0:{{ default 443 .Values.vault.listenerPort }}"
         tls_key_file = "/etc/vault/tls/vault.key"
         tls_cert_file = "/etc/vault/tls/vault.crt"
         tls_client_ca_file = "/etc/vault/tls/ca.crt"
     {{- else}}
-        address = "0.0.0.0:{{ default 80 .Values.vault.listenerPort }}"
-        tls_disable = true
+        tls_disable = "true"
     {{- end}}
       }
-#   disable_mlock = true
+
+      disable_mlock = false
