Fixing deployment error from statefulset deployment where names etcdTls and vaultTls do not conform to dns1123 standards where the string must be lowercase. (#65)
@alejandroEsc will check tomorrow. This is blocking my progress.

--- a/vault/templates/_containerVault.yaml
+++ b/vault/templates/_containerVault.yaml
@@ -22,11 +22,11 @@ Create helm partial for Vault container
     mountPath: /etc/vault/cfg
     readOnly: true
 {{- if .Values.vault.tls.enabled }}
-  - name: vaultTls
+  - name: vaulttls
     mountPath: /etc/vault/tls
 {{- end }}
 {{- if .Values.vault.etcdBackend.tls.enabled }}
-  - name: etcdTls
+  - name: etcdtls
     mountPath: /etc/etcd/tls
 {{- end }}
   env:
